[gd_scene load_steps=7 format=3 uid="uid://obii3sj8m1le"]

[ext_resource type="Script" path="res://Scripts/Character_Selection.gd" id="1_8bv3v"]
[ext_resource type="Texture2D" uid="uid://db4jyx124anwg" path="res://1083.jpg" id="2_30ujs"]
[ext_resource type="PackedScene" uid="uid://1quu2n6s1xft" path="res://Resources/Scenes/UI/CharacterSelectionItem.tscn" id="3_7pipn"]
[ext_resource type="Texture2D" uid="uid://w1qh2owpt8xo" path="res://amo-05.png" id="4_2bccg"]
[ext_resource type="Texture2D" uid="uid://c4q1jsk4xkf6y" path="res://amo-04.png" id="5_neabp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dk88c"]
size = Vector2(16, 16)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_8bv3v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dk88c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="1083" type="Sprite2D" parent="."]
position = Vector2(608.989, 324)
scale = Vector2(0.208026, 0.208026)
texture = ExtResource("2_30ujs")

[node name="MenuButton" type="MenuButton" parent="."]
offset_left = 35.0
offset_top = -86.0
offset_right = 291.0
offset_bottom = -22.0
text = "Character 1"

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CharacterSelectionBar" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CharacterSelectionBar"]
layout_mode = 0
offset_left = 80.0
offset_top = 60.0
offset_right = 120.0
offset_bottom = 131.0
theme_override_constants/separation = 115

[node name="CharacterSelectionItem" parent="UI/CharacterSelectionBar/VBoxContainer" instance=ExtResource("3_7pipn")]
layout_mode = 2

[node name="Label" parent="UI/CharacterSelectionBar/VBoxContainer/CharacterSelectionItem/Button/HBoxContainer" index="1"]
text = "Sussy Red"

[node name="CharacterSelectionItem2" parent="UI/CharacterSelectionBar/VBoxContainer" instance=ExtResource("3_7pipn")]
layout_mode = 2

[node name="TextureRect" parent="UI/CharacterSelectionBar/VBoxContainer/CharacterSelectionItem2/Button/HBoxContainer" index="0"]
texture = ExtResource("4_2bccg")

[node name="Label" parent="UI/CharacterSelectionBar/VBoxContainer/CharacterSelectionItem2/Button/HBoxContainer" index="1"]
text = "Crew Yellow"

[node name="BottomButtonsContainer" type="HBoxContainer" parent="UI"]
layout_mode = 0
offset_left = 500.0
offset_top = 550.0
offset_right = 620.0
offset_bottom = 581.0
scale = Vector2(2, 2)
theme_override_constants/separation = 20

[node name="Button" type="Button" parent="UI/BottomButtonsContainer"]
layout_mode = 2
text = "Back"

[node name="Button2" type="Button" parent="UI/BottomButtonsContainer"]
layout_mode = 2
text = "Confirm"

[node name="CharacterPannel" type="PanelContainer" parent="UI"]
layout_mode = 0
offset_left = 380.0
offset_top = 60.0
offset_right = 1089.0
offset_bottom = 410.0

[node name="CharacterContainer" type="HBoxContainer" parent="UI/CharacterPannel"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_constants/separation = -1

[node name="CharacterTextMargin" type="MarginContainer" parent="UI/CharacterPannel/CharacterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="CharacterText" type="VBoxContainer" parent="UI/CharacterPannel/CharacterContainer/CharacterTextMargin"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="CharacterName" type="Label" parent="UI/CharacterPannel/CharacterContainer/CharacterTextMargin/CharacterText"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Sussy Red"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/CharacterPannel/CharacterContainer/CharacterTextMargin/CharacterText"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="CharacterDescription" type="RichTextLabel" parent="UI/CharacterPannel/CharacterContainer/CharacterTextMargin/CharacterText"]
layout_mode = 2
text = "	The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. 

	Sections 1.10.32 and 1.10.33 from \"de Finibus Bonorum et Malorum\" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham."
fit_content = true

[node name="CharacterImage" type="TextureRect" parent="UI/CharacterPannel/CharacterContainer"]
layout_mode = 2
texture = ExtResource("5_neabp")
expand_mode = 2

[connection signal="pressed" from="UI/CharacterSelectionBar/VBoxContainer/CharacterSelectionItem/Button" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="UI/CharacterSelectionBar/VBoxContainer/CharacterSelectionItem2/Button" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="UI/BottomButtonsContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="UI/BottomButtonsContainer/Button2" to="." method="_on_button_2_pressed"]

[editable path="UI/CharacterSelectionBar/VBoxContainer/CharacterSelectionItem"]
[editable path="UI/CharacterSelectionBar/VBoxContainer/CharacterSelectionItem2"]
